--- a/frontEnd/assets/css/style.css
+++ b/frontEnd/assets/css/style.css
@@ -80,11 +80,49 @@ body{
     margin: 10px;
 }
 
+.organizer:first{
+    opacity: 1;
+}
+
 .organizer{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 90%;
+
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.organizerSwitch{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.switch{
+    width: 50px;
+    height: 25px;
+    background-color: #555;
+    border-radius: 25px;
+    transition: all 0.5s ease-in-out;
+}
+
+.switchButton{
+    width: 25px;
+    height: 25px;
+    background-color: #00ddff;
+    border-radius: 50%;
+    transition: all 0.5s ease-in-out;
+    
+    position: relative;
+    top: 0px;
+    left: 0px;
+    cursor: pointer;
 }
 
 
@@ -120,16 +158,24 @@ body{
 
 select{
     background-color: #232323;
-    border: none;
+    border: 1px solid #555;
     border-radius: 15px;
     width: auto;
     padding: 8px;
     max-width: 350px;
     font-size: calc(18px + 1vh);
+    transition: all 0.5s ease-in-out;
 }
 
-legend {
+option{
+    font-size: calc(16px + 1vh);
+    
+}
+
+
+optgroup {
     font-size: calc(10px + 1vh);
+    color: rgba(255, 255, 255, 0.5);
 }
 
 img {
